CHATS_SIT/force-app/main/default/objects/sfsit_t_adjmt_addr_hist__x.object
<CustomObject>
    <description>sfsit$t_adjmt_addr_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_adjmt_addr_hist</externalName>
    <fields>
        <fullName>adr_city__c</fullName>
        <description>adr_city</description>
        <externalDeveloperName>adr_city</externalDeveloperName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_1__c</fullName>
        <description>adr_line_1</description>
        <externalDeveloperName>adr_line_1</externalDeveloperName>
        <label>Address Line 1</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_2__c</fullName>
        <description>adr_line_2</description>
        <externalDeveloperName>adr_line_2</externalDeveloperName>
        <label>Address Line 2</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_line_3__c</fullName>
        <description>adr_line_3</description>
        <externalDeveloperName>adr_line_3</externalDeveloperName>
        <label>Address Line 3</label>
        <length>26</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_state__c</fullName>
        <description>adr_state</description>
        <externalDeveloperName>adr_state</externalDeveloperName>
        <label>State</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_extn__c</fullName>
        <description>adr_zip_extn</description>
        <externalDeveloperName>adr_zip_extn</externalDeveloperName>
        <label>Zip Code ext</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adr_zip_main__c</fullName>
        <description>adr_zip_main</description>
        <externalDeveloperName>adr_zip_main</externalDeveloperName>
        <label>Zip Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_type_addr__c</fullName>
        <description>cde_type_addr</description>
        <externalDeveloperName>cde_type_addr</externalDeveloperName>
        <label>Address type code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>idn_addr_adjmt__c</fullName>
        <description>idn_addr_adjmt</description>
        <externalDeveloperName>idn_addr_adjmt</externalDeveloperName>
        <label>Address adjustment ID</label>
        <length>50</length>
        <referenceTargetField>T_ADJMT_ADDR__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_ADJMT_ADDR__c</referenceTo>
        <relationshipLabel>Adjustment Address Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_adjmt_addr_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_addr_adjmt_hist__c</fullName>
        <description>idn_addr_adjmt_hist</description>
        <externalDeveloperName>idn_addr_adjmt_hist</externalDeveloperName>
        <label>Address adjustment hist ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_adjmt__c</fullName>
        <description>idn_adjmt</description>
        <externalDeveloperName>idn_adjmt</externalDeveloperName>
        <label>adjustment ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_adjmt_addr_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>logical delete indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Adjustment Address History</label>
    <pluralLabel>Adjustment Address History</pluralLabel>
</CustomObject>